[gd_scene load_steps=8 format=2]

[ext_resource path="res://castagne/editor/CastagneEditorCharacterEdit.gd" type="Script" id=1]
[ext_resource path="res://castagne/editor/EditorTheme.tres" type="Theme" id=2]
[ext_resource path="res://castagne/editor/MovingBackground.tres" type="Material" id=3]

[sub_resource type="InputEventKey" id=1]
control = true
command = true
pressed = true
scancode = 83

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
control = true
command = true
pressed = true
scancode = 82

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="CharacterEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngineVP" type="ViewportContainer" parent="."]
anchor_right = 0.6
anchor_bottom = 0.8
margin_top = 32.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="EngineVP"]
size = Vector2( 1152, 832 )
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="CodePanel" type="Panel" parent="."]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Documentation" type="Control" parent="CodePanel"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CodePanel/Documentation"]
anchor_right = 1.0
margin_left = 16.0
margin_right = -16.0
margin_bottom = 18.0
text = "Hitbox (Back, Front, Bottom, Top)"
valign = 1

[node name="FuncdocButton" type="Button" parent="CodePanel/Documentation"]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
text = "Docs"
clip_text = true

[node name="Doc" type="TextEdit" parent="CodePanel/Documentation"]
anchor_right = 0.8
anchor_bottom = 1.0
margin_top = 24.0
text = "Function description

Or Argument description
Can be long
long"
readonly = true
wrap_enabled = true

[node name="Code" type="TextEdit" parent="CodePanel"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
text = "Call(GroundedAttack)
Hurtbox(0,10000,0,10000)
F20-30:
	Attack(50,50)
	Hitbox(0,2000,0,20000)
endif
Anim(SuperAttack)"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = true
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="CodePanel"]
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0

[node name="State" type="Button" parent="CodePanel/Header"]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = ":5A:"

[node name="File" type="Button" parent="CodePanel/Header"]
anchor_right = 0.7
anchor_bottom = 0.4
text = "Castagneur.casp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalledScripts" type="Button" parent="CodePanel/Header"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.4
text = "0 Called States"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation" type="Control" parent="CodePanel"]
visible = false
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CodePanel/Navigation"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChooseState" type="Control" parent="CodePanel/Navigation"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveList" type="ItemList" parent="CodePanel/Navigation/ChooseState"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
margin_bottom = -40.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false, "Item 21", null, false, "Item 22", null, false, "Item 23", null, false, "Item 24", null, false, "Item 25", null, false, "Item 26", null, false, "Item 27", null, false, "Item 28", null, false, "Item 29", null, false, "Item 30", null, false, "Item 31", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="CodePanel/Navigation/ChooseState"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = -16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewStateName" type="LineEdit" parent="CodePanel/Navigation/ChooseState/Bottom"]
margin_right = 384.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2
placeholder_text = "New State Name"

[node name="NewState" type="Button" parent="CodePanel/Navigation/ChooseState/Bottom"]
margin_left = 388.0
margin_right = 464.0
margin_bottom = 24.0
text = "New State"

[node name="ChooseFile" type="Control" parent="CodePanel/Navigation"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveList" type="ItemList" parent="CodePanel/Navigation/ChooseFile"]
anchor_right = 1.0
anchor_bottom = 1.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false, "Item 21", null, false, "Item 22", null, false, "Item 23", null, false, "Item 24", null, false, "Item 25", null, false, "Item 26", null, false, "Item 27", null, false, "Item 28", null, false, "Item 29", null, false, "Item 30", null, false, "Item 31", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalledStates" type="Control" parent="CodePanel/Navigation"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveList" type="ItemList" parent="CodePanel/Navigation/CalledStates"]
anchor_right = 1.0
anchor_bottom = 1.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false, "Item 21", null, false, "Item 22", null, false, "Item 23", null, false, "Item 24", null, false, "Item 25", null, false, "Item 26", null, false, "Item 27", null, false, "Item 28", null, false, "Item 29", null, false, "Item 30", null, false, "Item 31", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="."]
anchor_right = 0.6
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="TopBar/HBoxContainer"]
margin_right = 46.0
margin_bottom = 32.0
text = "Back"

[node name="Save" type="Button" parent="TopBar/HBoxContainer"]
margin_left = 50.0
margin_right = 95.0
margin_bottom = 32.0
shortcut = SubResource( 2 )
text = "Save"

[node name="Label" type="Label" parent="TopBar/HBoxContainer"]
margin_left = 99.0
margin_right = 1152.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Editing Castagneur.casp"
align = 1
valign = 1

[node name="BottomPanel" type="Control" parent="."]
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 1.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BBigPanel" type="Panel" parent="BottomPanel"]
self_modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
anchor_top = -0.8
anchor_right = 1.0
margin_top = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigTool" type="Control" parent="BottomPanel/BBigPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="BMiniPanel" type="Panel" parent="BottomPanel"]
anchor_right = 1.0
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="BottomPanel/BMiniPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Match" type="VBoxContainer" parent="BottomPanel/BMiniPanel/HBox"]
margin_right = 148.0
margin_bottom = 200.0

[node name="ResetExecuteMove" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match"]
margin_right = 148.0
margin_bottom = 110.0
size_flags_vertical = 3
text = "Execute Move"

[node name="ExecuteMoveData" type="HBoxContainer" parent="BottomPanel/BMiniPanel/HBox/Match"]
margin_top = 114.0
margin_right = 148.0
margin_bottom = 134.0

[node name="MoveToExec" type="LineEdit" parent="BottomPanel/BMiniPanel/HBox/Match/ExecuteMoveData"]
margin_right = 64.0
margin_bottom = 20.0
size_flags_horizontal = 3
align = 2
placeholder_text = "Move"

[node name="Frame" type="SpinBox" parent="BottomPanel/BMiniPanel/HBox/Match/ExecuteMoveData"]
margin_left = 68.0
margin_right = 148.0
margin_bottom = 20.0
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Reset1" type="HBoxContainer" parent="BottomPanel/BMiniPanel/HBox/Match"]
margin_top = 138.0
margin_right = 148.0
margin_bottom = 156.0

[node name="ResetGround" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match/Reset1"]
margin_right = 72.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ground"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetAir" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match/Reset1"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Air"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset2" type="HBoxContainer" parent="BottomPanel/BMiniPanel/HBox/Match"]
margin_top = 160.0
margin_right = 148.0
margin_bottom = 178.0

[node name="ResetCorner" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match/Reset2"]
margin_right = 72.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Corner"

[node name="ResetCornerReverse" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match/Reset2"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "RCorner"

[node name="FocusOnChar" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match"]
visible = false
margin_top = 156.0
margin_right = 136.0
margin_bottom = 176.0
toggle_mode = true
text = "Focus on character"

[node name="MatchType" type="HBoxContainer" parent="BottomPanel/BMiniPanel/HBox/Match"]
margin_top = 182.0
margin_right = 148.0
margin_bottom = 200.0

[node name="ResetMatchTraining" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match/MatchType"]
margin_right = 148.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Train"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetMatchNormal" type="Button" parent="BottomPanel/BMiniPanel/HBox/Match/MatchType"]
visible = false
margin_left = 77.0
margin_right = 136.0
margin_bottom = 20.0
text = "Normal"

[node name="Middle" type="VBoxContainer" parent="BottomPanel/BMiniPanel/HBox"]
margin_left = 152.0
margin_right = 1057.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="TopBar" type="HBoxContainer" parent="BottomPanel/BMiniPanel/HBox/Middle"]
margin_right = 905.0
margin_bottom = 18.0

[node name="Flow" type="HBoxContainer" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar"]
margin_right = 897.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="Flow" type="Label" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow"]
margin_top = 2.0
margin_right = 33.0
margin_bottom = 16.0
text = "Flow:"

[node name="FlowPlay" type="Button" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow"]
margin_left = 37.0
margin_right = 77.0
margin_bottom = 18.0
toggle_mode = true
pressed = true
text = "Run"

[node name="FlowSlowmo" type="Button" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow"]
margin_left = 81.0
margin_right = 126.0
margin_bottom = 18.0
toggle_mode = true
text = "Slow"

[node name="FlowNextFrame" type="Button" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow"]
margin_left = 130.0
margin_right = 220.0
margin_bottom = 18.0
text = "Next Frame"

[node name="VSeparator" type="VSeparator" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar"]
margin_left = 901.0
margin_right = 905.0
margin_bottom = 18.0

[node name="Phase" type="Label" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar"]
visible = false
margin_left = 443.0
margin_top = 3.0
margin_right = 489.0
margin_bottom = 17.0
text = "Phase: "

[node name="PhaseA" type="Button" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar"]
visible = false
margin_left = 493.0
margin_right = 514.0
margin_bottom = 20.0
text = "A"

[node name="PhaseT" type="Button" parent="BottomPanel/BMiniPanel/HBox/Middle/TopBar"]
visible = false
margin_left = 518.0
margin_right = 537.0
margin_bottom = 20.0
text = "T"

[node name="MiniTool" type="Control" parent="BottomPanel/BMiniPanel/HBox/Middle"]
margin_top = 22.0
margin_right = 905.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Reload" type="VBoxContainer" parent="BottomPanel/BMiniPanel/HBox"]
margin_left = 1061.0
margin_right = 1120.0
margin_bottom = 200.0

[node name="Reload" type="Button" parent="BottomPanel/BMiniPanel/HBox/Reload"]
margin_right = 59.0
margin_bottom = 156.0
size_flags_vertical = 3
shortcut = SubResource( 4 )
text = "Reload"

[node name="ChangeTool" type="Button" parent="BottomPanel/BMiniPanel/HBox/Reload"]
margin_top = 160.0
margin_right = 59.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 10, 10 )
size_flags_horizontal = 3
text = "Tools"

[node name="BigToolExpand" type="Button" parent="BottomPanel/BMiniPanel/HBox/Reload"]
margin_top = 182.0
margin_right = 59.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 10, 10 )
size_flags_horizontal = 3
text = "^^"

[node name="Tools" type="HBoxContainer" parent="BottomPanel/BMiniPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -16.0
margin_right = -16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolsWindow" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ToolsWindow"]
modulate = Color( 1, 1, 1, 0.494118 )
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.517647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Panel" parent="ToolsWindow"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Label" type="Label" parent="ToolsWindow/Window"]
anchor_right = 1.0
margin_bottom = 32.0
text = "Tools"
align = 1
valign = 1

[node name="ToolList" type="ItemList" parent="ToolsWindow/Window"]
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Info" type="Control" parent="ToolsWindow/Window"]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Title" type="Label" parent="ToolsWindow/Window/Info"]
anchor_right = 1.0
margin_bottom = 32.0
text = "Tool Name"
align = 1
valign = 1

[node name="Description" type="TextEdit" parent="ToolsWindow/Window/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_bottom = -48.0
text = "Tool description"
readonly = true

[node name="ToolSelect" type="Button" parent="ToolsWindow/Window/Info"]
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
margin_top = -40.0
text = "Select Tool"

[node name="ToolDocumentation" type="Button" parent="ToolsWindow/Window/Info"]
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
text = "Documentation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolCancel" type="Button" parent="ToolsWindow/Window"]
anchor_left = 0.9
anchor_right = 1.0
margin_bottom = 32.0
text = "X"

[connection signal="pressed" from="CodePanel/Documentation/FuncdocButton" to="." method="_on_FuncdocButton_pressed"]
[connection signal="cursor_changed" from="CodePanel/Code" to="." method="_on_Code_cursor_changed"]
[connection signal="text_changed" from="CodePanel/Code" to="." method="_on_Code_text_changed"]
[connection signal="pressed" from="CodePanel/Header/State" to="." method="On_Header_State_Pressed"]
[connection signal="pressed" from="CodePanel/Header/File" to="." method="_on_Header_File_pressed"]
[connection signal="pressed" from="CodePanel/Header/CalledScripts" to="." method="_on_Header_CheckParent_pressed"]
[connection signal="item_activated" from="CodePanel/Navigation/ChooseState/MoveList" to="." method="_on_Navigation_MoveList_item_activated"]
[connection signal="pressed" from="CodePanel/Navigation/ChooseState/Bottom/NewState" to="." method="_on_NewState_pressed"]
[connection signal="item_activated" from="CodePanel/Navigation/ChooseFile/MoveList" to="." method="_on_Navigation_MoveList_item_activated"]
[connection signal="item_activated" from="CodePanel/Navigation/CalledStates/MoveList" to="." method="_on_Navigation_MoveList_item_activated"]
[connection signal="pressed" from="TopBar/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/ResetExecuteMove" to="." method="_on_ResetExecuteMove_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/Reset1/ResetGround" to="." method="_on_ResetGround_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/Reset1/ResetAir" to="." method="_on_ResetAir_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/Reset2/ResetCorner" to="." method="_on_ResetCorner_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/Reset2/ResetCornerReverse" to="." method="_on_ResetCornerReverse_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/MatchType/ResetMatchTraining" to="." method="_on_ResetMatchTraining_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Match/MatchType/ResetMatchNormal" to="." method="_on_ResetMatchNormal_pressed"]
[connection signal="toggled" from="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow/FlowPlay" to="." method="_on_FlowPlay_toggled"]
[connection signal="toggled" from="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow/FlowSlowmo" to="." method="_on_FlowSlowmo_toggled"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Middle/TopBar/Flow/FlowNextFrame" to="." method="_on_FlowNextFrame_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Reload/Reload" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Reload/ChangeTool" to="." method="_on_ChangeTool_pressed"]
[connection signal="pressed" from="BottomPanel/BMiniPanel/HBox/Reload/BigToolExpand" to="." method="_on_BigToolExpand_pressed"]
[connection signal="item_activated" from="ToolsWindow/Window/ToolList" to="." method="_on_ToolList_item_activated"]
[connection signal="item_selected" from="ToolsWindow/Window/ToolList" to="." method="_on_ToolList_item_selected"]
[connection signal="nothing_selected" from="ToolsWindow/Window/ToolList" to="." method="_on_ToolList_nothing_selected"]
[connection signal="pressed" from="ToolsWindow/Window/Info/ToolSelect" to="." method="_on_ToolSelect_pressed"]
[connection signal="pressed" from="ToolsWindow/Window/Info/ToolDocumentation" to="." method="_on_ToolDocumentation_pressed"]
[connection signal="pressed" from="ToolsWindow/Window/ToolCancel" to="." method="_on_ToolCancel_pressed"]
